  number of columns occupied by "string" on the terminal, taking into account
  double-width Unicode characters and zero-width ANSI escape sequences.

- NEW FEATURE: remind: You can add custom substitution sequences of the form
  %{name} or %*{name} that end up calling the function subst_name and using
  its return value as the replacement for the substitution sequence.

- BUG FIX: remind: Make MSF correctly format UTF-8 text and text with
  embedded ANSI color-changing codes.

- BUG FIX: remind: Make ADDOMIT actually work correctly in a SATISFY-type
  REM command.  Bug found by Gunther Reißig

- BUG FIX: Convert documentation files and src/lang.h to UTF-8.  Patch
  from Jochen Sprickerhof.

- BUG FIX: Fix tests in non-UTF-8 locales.

- BUG FIX: Fix a few problems with the include/holidays/us.rem file.

* VERSION 4.1 Patch 0 - 2022-09-25

- NEW FEATURE: remind: "remind -c" now supports the MOON special, printing
  the moon phases in the calendar if the locale supports UTF-8 encoding.

- NEW FEATURE: remind: "remind -c" now supports the SHADE special.  Works
  best with the 256-color extended XTerm palette or 24-bit true-color
  terminal escape sequences.

- NEW FEATURE: remind: "remind -c" now supports the WEEK special.

- NEW FEATURE: remind: The new "stdout()" function returns a string describing
  where stdout is going.  Examples of return values are "TTY" if remind's
  output is going to terminal, "FILE" if it's redirected to a plain file,
  or "PIPE" if it's going to a pipe.  See the man page for all the details.

- NEW FEATURE: Add the "-wt" option to set the calendar width to the terminal
  width even if standard output is a pipe.  Useful for situations like this:

      remind -wt -c .reminders | less -R

- CHANGE: "make install" now no longer strips debugging symbols from the
  remind and rem2ps executables.  Use "make install-stripped" if you want
  them stripped.

- CHANGE: remind: "remind -c" highlights today's date in bold, if
  colors are enabled.
