@@ -260,6 +260,7 @@ static void DoReminders(void)
 	    case T_Flush:   r=DoFlush(&p);   break;
 	    case T_Set:     r=DoSet(&p);     break;
 	    case T_Fset:    r=DoFset(&p);    break;
+	    case T_Funset:  r=DoFunset(&p);  break;
 	    case T_UnSet:   r=DoUnset(&p);   break;
 	    case T_Clr:     r=DoClear(&p);   break;
             case T_Debug:   r=DoDebug(&p);   break;
